; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/large_object/extr_inv_api.c_close_lo_relation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/large_object/extr_inv_api.c_close_lo_relation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lo_heap_r = common dso_local global i32* null, align 8
@lo_index_r = common dso_local global i32* null, align 8
@CurrentResourceOwner = common dso_local global i32 0, align 4
@TopTransactionResourceOwner = common dso_local global i32 0, align 4
@NoLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @close_lo_relation(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32*, i32** @lo_heap_r, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** @lo_index_r, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %31

9:                                                ; preds = %6, %1
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %30

12:                                               ; preds = %9
  %13 = load i32, i32* @CurrentResourceOwner, align 4
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* @TopTransactionResourceOwner, align 4
  store i32 %14, i32* @CurrentResourceOwner, align 4
  %15 = load i32*, i32** @lo_index_r, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load i32*, i32** @lo_index_r, align 8
  %19 = load i32, i32* @NoLock, align 4
  %20 = call i32 @index_close(i32* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %12
  %22 = load i32*, i32** @lo_heap_r, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %28

24:                                               ; preds = %21
  %25 = load i32*, i32** @lo_heap_r, align 8
  %26 = load i32, i32* @NoLock, align 4
  %27 = call i32 @table_close(i32* %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %21
  %29 = load i32, i32* %3, align 4
  store i32 %29, i32* @CurrentResourceOwner, align 4
  br label %30

30:                                               ; preds = %28, %9
  store i32* null, i32** @lo_heap_r, align 8
  store i32* null, i32** @lo_index_r, align 8
  br label %31

31:                                               ; preds = %30, %6
  ret void
}

declare dso_local i32 @index_close(i32*, i32) #1

declare dso_local i32 @table_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
